--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+ "scripts": {
+  "start": "next start",
+  "build": "next build",
+  "dev": "next dev"
+}
+
   "keywords": [],
   "author": "",
   "license": "ISC",
