--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
- "scripts": {
-  "start": "next start",
-  "build": "next build",
-  "dev": "next dev"
-}
 
+  "scripts": {
+    "start": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
